# recording-monitor

./: .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  config.status  configure.ac  recording-level-monitor  recording-level-monitor.1  recording-level-monitor.desktop  recording-level-monitor.glade  recording-level-monitor.gladep  recording-level-monitor.spec.in  recording-monitor  recording-monitor.1  recording-monitor.desktop  recording-monitor.glade  recording-monitor.gladep  recording-monitor.spec.in  shazam
